# chess-engine

./: Cargo.toml
src/: board.rs  lib.rs  piece.rs  position.rs  square.rs
