[package]
name = "chess-engine"
version = "0.1.2"
authors = [
    "Adam McDaniel <adam.mcdaniel17@gmail.com>",
    "Mario Reder <mario.reder@pm.me>",
]
edition = "2018"
description = "A dependency-free chess engine library built to run anywhere."
documentation = "https://docs.rs/chess-engine/"
readme = "README.md"
homepage = "https://github.com/adam-mcdaniel/chess-engine"
repository = "https://github.com/adam-mcdaniel/chess-engine"
license = "MIT"
keywords = ["chess", "engine", "game", "board", "ai"]
categories = [
    "games",
    "no-std",
    "game-engines",
    "game-development",
    "algorithms",
]

[[bin]]
path = "src/bin.rs"
name = "chess"

[[example]]
name = "terminal"

[dependencies]
borsh = "1"
either = "1"
rand = { version = "0.8", default-features = false, features = ["alloc"] }
rand_chacha = "0.3"
witgen = "0.15"

[dependencies.near-sdk]
version = "4"
git = "https://github.com/near/near-sdk-rs.git"
rev = "ee5cf867741d6d0d4db15857609b9e9268cc9b32"
default-features = false
features = ["unstable"]

[package.metadata.witgen]
export = true
